--- a/perfil.html
+++ b/perfil.html
@@ -57,18 +57,16 @@
   </script>
 </head>
 <body class="bg-gradient-to-b from-neutral-50 to-neutral-100 relative">
-  <!-- Partículas -->
+
   <div id="particles-js" class="absolute inset-0 z-[-1]"></div>
 
-  <!-- Cabeçalho -->
 <header class="bg-neutral-800 shadow-lg">
     <div class="max-w-7xl mx-auto py-6 px-4 sm:px-6 lg:px-8 text-center">
-        <h1 class="text-3xl font-bold text-white">Informações Pessoais</h1>
+        <h1 class="text-3xl font-bold text-white">Documentação:</h1>
     </div>
 </header>
 
   <main class="max-w-7xl mx-auto py-10 px-4 sm:px-6 lg:px-8">
-    <!-- Seção do Currículo -->
     <section class="mb-10">
       <h2 class="text-2xl font-semibold mb-4 border-l-4 border-neutral-800 pl-3 text-neutral-800">Currículo</h2>
       <div class="bg-white rounded-lg shadow-xl border border-neutral-200 hover:shadow-2xl transition-shadow duration-300">
@@ -79,18 +77,22 @@
 
             </div>
           </a>
-          <div class="text-center mt-4">
+          <div class="text-center mt-4 space-x-4">
             <a href="Curriculo.png" download 
                class="inline-block bg-neutral-800 hover:bg-neutral-700 text-white font-semibold py-2 px-4 rounded-lg
                       transition-colors duration-300 transform hover:scale-105 shadow-md hover:shadow-lg text-sm">
               Baixar Currículo (PNG)
+            </a>
+            <a href="curriculopdf.pdf" download
+               class="inline-block bg-neutral-800 hover:bg-neutral-700 text-white font-semibold py-2 px-4 rounded-lg
+                      transition-colors duration-300 transform hover:scale-105 shadow-md hover:shadow-lg text-sm">
+              Baixar Currículo (PDF)
             </a>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- Seção de Certificações -->
     <section>
       <h2 class="text-2xl font-semibold mb-4 border-l-4 border-neutral-800 pl-3 text-neutral-800">Certificações</h2>
       <div class="bg-white rounded-lg shadow-xl border border-neutral-200 p-6 hover:shadow-2xl transition-shadow duration-300">
@@ -105,7 +107,6 @@
     </section>
   </main>
 
-  <!-- Rodapé -->
   <footer class="bg-neutral-800 shadow-lg mt-10">
     <div class="max-w-7xl mx-auto py-4 px-4 sm:px-6 lg:px-8 text-center text-white">
       © 2025 Arkersoft. Todos os direitos reservados.
