--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-16">
                 <h2 class="text-3xl md:text-4xl font-bold mb-4">Sobre a <span class="text-gradient">Arkersoft</span></h2>
-                <p class="text-gray-300 max-w-2xl mx-auto">A Arkersoft surgiu em 2016 com um grupo de estudantes em análise e desenvolvimento de sistemas. Carregamos em nosso DNA a mesma preocupação de um sócio ao oferecer um serviço. Com o tempo adquirimos experiência com nossos clientes e encontramos a fórmula ideal para garantir satisfação de 99% dos nossos clientes.</p>
+                <p class="text-gray-300 max-w-2xl mx-auto">A Arkersoft surgiu em 2016 com um grupo de estudantes em análise e desenvolvimento de sistemas. Carregamos em nosso DNA a mesma preocupação de um sócio ao agregar valor a uma empresa. Com o tempo adquirimos experiência com nossos clientes e encontramos a fórmula ideal para garantir satisfação de 99% dos nossos clientes.</p>
             </div>
             
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
