--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
                     <div class="p-6 font-mono text-sm">
                         <div class="flex">
                             <span class="text-green-400">$</span>
-                            <div class="typing ml-2 text-gray-300">É hora de dar o primeiro passo para transformar seu negócio...</div>
+                            <div class="typing ml-2 text-gray-300">É hora de dar o primeiro passo...</div>
                         </div>
                         <div class="mt-4 animate-pulse">
                             <span class="text-green-400">$</span>
