--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
             --transition-speed: 0.3s;
         }
 
+        html {
+            overflow-x: hidden; /* Ajuda a prevenir a rolagem horizontal se algum conteúdo transbordar */
+        }
+
         body {
             font-family: 'Space Grotesk', sans-serif;
             background-color: var(--dark-bg);
