--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 
     <!-- Navigation -->
     <nav class="fixed top-0 w-full bg-dark-bg/80 backdrop-blur-lg border-b border-purple-500/10 z-20">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 overflow-hidden">
             <div class="flex items-center justify-between h-16">
                 <a href="#" class="flex items-center">
                     <img src="arkerlogo1.png" alt="Arkersoft Logo" class="h-8">
