--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
                 <div class="scroll-reveal opacity-0 translate-y-8">
                     <div>
-                        <img src="pessoasarker.png" alt="Equipe Arkersoft" class="max-w-md lg:max-w-lg mx-auto h-auto rounded-lg">
+                        <img src="pessoasarker.png" alt="Equipe Arkersoft" class="w-full max-w-md lg:max-w-lg mx-auto h-auto rounded-lg">
                     </div>
                 </div>
                 
