--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arkersoft</title>
-    <meta name="description" content="Soluções em IA, Desenvolvimento de Software de Ponta e Transformação Digital">
+    <meta name="description" content="Soluções em IA, Desenvolvimento de Software, presença Digital">
     <meta name="keywords" content="Inteligência Artificial, Cloud Computing, data, IoT, Consultoria em tecnologia, Desenvolvimento de Software, Arkersoft">
     <meta name="author" content="Arkersoft">
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -31,7 +31,7 @@
         }
 
         html {
-            overflow-x: hidden; /* Ajuda a prevenir a rolagem horizontal se algum conteúdo transbordar */
+            overflow-x: hidden;
         }
 
         body {
@@ -499,7 +499,7 @@
                 
                 <div class="scroll-reveal opacity-0 translate-y-8">
                     <h3 class="text-2xl font-semibold mb-4">Nossa Missão</h3>
-                    <p class="text-gray-300 mb-6">A Arkersoft tem o compromisso de fornecer projetos sustentáveis ao seu negócio. Nossa missão é mais do que entregar um serviço/produto, é garantir a melhor tomada de decisão em tecnologia.</p>
+                    <p class="text-gray-300 mb-6">A Arkersoft tem o compromisso de fornecer projetos sustentáveis ao seu negócio. Nossa objetivo vai além de entregar um serviço/produto, é garantir a melhor tomada de decisão em tecnologia.</p>
                     
                     <div class="space-y-6 pl-6">
                         <div class="timeline-item pl-8 relative">
@@ -577,12 +577,12 @@
                             <i class="fas fa-star text-yellow-400"></i>
                         </div>
                     </div>
-                    <p class="text-gray-300 mb-4">"A Arkersoft criou um site para minha empresa. Ficou visualmente atraente e o site responde muito rápido, ajudou a agregar valor ao meu trabalho."</p>
+                    <p class="text-gray-300 mb-4">"A Arkersoft prestou serviço de ETL de dados e ainda nos disponibilizou acesso aos códigos e ferramentas para mim."</p>
                     <div class="flex items-center justify-center">
                         <div class="mr-3 w-12 h-12 rounded-full bg-gradient-to-r from-purple-500 to-pink-500 flex items-center justify-center text-lg font-bold">RC</div>
                         <div>
-                            <h5 class="font-semibold">Diego Souza</h5>
-                            <p class="text-sm text-gray-400">CEO, Tech Assistence</p>
+                            <h5 class="font-semibold">Diego S.</h5>
+                            <p class="text-sm text-gray-400">CEO, Fire Manutenções</p>
                         </div>
                     </div>
                 </div>
@@ -601,8 +601,8 @@
                     <div class="flex items-center justify-center">
                         <div class="mr-3 w-12 h-12 rounded-full bg-gradient-to-r from-purple-500 to-pink-500 flex items-center justify-center text-lg font-bold">AS</div>
                         <div>
-                            <h5 class="font-semibold">Rogério Mateus</h5>
-                            <p class="text-sm text-gray-400">Diretor, DistroNet</p>
+                            <h5 class="font-semibold">Rogério M.</h5>
+                            <p class="text-sm text-gray-400">CEO, Tensetec</p>
                         </div>
                     </div>
                 </div>
@@ -621,8 +621,8 @@
                     <div class="flex items-center justify-center">
                         <div class="mr-3 w-12 h-12 rounded-full bg-gradient-to-r from-purple-500 to-pink-500 flex items-center justify-center text-lg font-bold">MO</div>
                         <div>
-                            <h5 class="font-semibold">Marcos Oliveira</h5>
-                            <p class="text-sm text-gray-400">CEO, MKT Importações</p>
+                            <h5 class="font-semibold">Marcos T.</h5>
+                            <p class="text-sm text-gray-400">CEO, G.A Importações</p>
                         </div>
                     </div>
                 </div>
