--- a/new.html
+++ b/new.html
@@ -79,7 +79,7 @@
                     <img src="arkerlogo1.png" alt="Arkersoft Logo" class="h-8 w-auto">
                 </a>
                 <nav class="hidden md:flex space-x-8">
-                    <a href="#recursos" class="text-gray-300 hover:text-purple-accent transition-colors">Produto</a>
+                    <a href="#home" class="text-gray-300 hover:text-purple-accent transition-colors">Produto</a>
                     <a href="#recursos" class="text-gray-300 hover:text-purple-accent transition-colors">Recursos</a>
                     <a href="#preco" class="text-gray-300 hover:text-purple-accent transition-colors">Preço</a>
                     <a href="#contato" class="text-gray-300 hover:text-purple-accent transition-colors">Contato</a>
@@ -92,7 +92,7 @@
     </header>
 
     <!-- Hero Section -->
-    <section class="relative py-20 overflow-hidden">
+    <section id="home" class="relative py-20 overflow-hidden">
         <div class="absolute inset-0 bg-gradient-to-r from-purple-dark/50 to-transparent"></div>
         <div class="container mx-auto px-6 relative">
             <div class="grid lg:grid-cols-2 gap-12 items-center">
@@ -139,7 +139,7 @@
                         <div class="space-y-6">
                             <div class="flex items-center justify-between">
                                 <h3 class="text-xl font-bold">Recursos poderosos com infinitas aplicações.
-                                   <p class="text-sm text-gray-400">O único software no Brasil que não cobra em créditos por uso.</p> </h3>
+                                   <p class="text-sm text-gray-400">O único no Brasil que não cobra em créditos por uso.</p> </h3>
                                 <div class="flex space-x-2">
                                     <div class="w-3 h-3 bg-red-500 rounded-full"></div>
                                     <div class="w-3 h-3 bg-yellow-500 rounded-full"></div>
@@ -367,7 +367,7 @@
                 </button>
 
                 <div class="text-sm text-gray-400 space-y-1">
-                    <p><i class="fas fa-lock mr-2"></i>Compra 100% Segura</p>
+                    <p><i class="fas fa-lock mr-2"></i>Compra 100% Segura com Mercado Pago</p>
                     <p><i class="fas fa-credit-card mr-2"></i>Pix, Cartão ou Boleto</p>
                 </div>
             </div>
