--- a/new.html
+++ b/new.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerador de Clientes - Arkersoft</title>
+    <title>Master Lead - Arkersoft</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -109,8 +109,8 @@
                     
                     <div class="flex flex-col sm:flex-row gap-4">
                         <button class="purple-gradient text-white font-bold py-4 px-8 rounded-lg hover-glow transition-all duration-300 transform hover:scale-105">
-                            <i class="fas fa-download mr-2"></i>
-                            Baixar Agora - R$ 69,90
+                            <i class="fas fa-rocket mr-2"></i>
+                            Adquirir Master Lead - R$ 99,90
                         </button>
                         <button class="border-2 border-purple-accent text-purple-accent font-bold py-4 px-8 rounded-lg hover:bg-purple-accent hover:text-white transition-all duration-300">
                             <i class="fas fa-play mr-2"></i>
@@ -280,8 +280,8 @@
                     <h3 class="text-2xl font-bold mb-6">Valor Total do Pacote</h3>
                     <div class="space-y-4">
                         <div class="flex justify-between items-center">
-                            <span>Software Gerador de Clientes</span>
-                            <span class="text-purple-accent font-bold">R$ 69,90</span>
+                            <span>Software Master Lead</span>
+                            <span class="text-purple-accent font-bold">R$ 99,90</span>
                         </div>
                         <div class="flex justify-between items-center">
                             <span>Automatizador WhatsApp</span>
@@ -294,10 +294,10 @@
                         <hr class="border-purple-light/20">
                         <div class="flex justify-between items-center text-lg">
                             <span>Valor Total</span>
-                            <span class="line-through text-gray-400">R$ 119,70</span>
+                            <span class="line-through text-gray-400">R$ 149,70</span>
                         </div>
                         <div class="text-center">
-                            <div class="text-3xl font-bold text-gradient mb-2">R$ 69,90</div>
+                            <div class="text-3xl font-bold text-gradient mb-2">R$ 99,90</div>
                             <div class="text-sm text-gray-400">Economize R$ 49,80</div>
                         </div>
                     </div>
@@ -362,8 +362,8 @@
                 </div>
 
                 <button class="purple-gradient text-white font-bold py-6 px-12 rounded-xl text-xl hover-glow transition-all duration-300 transform hover:scale-105 mb-6">
-                    <i class="fas fa-download mr-3"></i>
-                    Baixar Agora por apenas R$ 69,90
+                    <i class="fas fa-rocket mr-3"></i>
+                    Adquirir Agora por apenas R$ 99,90
                 </button>
 
                 <div class="text-sm text-gray-400 space-y-1">
