--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                         <i class="fas fa-atom text-4xl"></i>
                     </div>
                     <h3 class="text-xl font-semibold mb-3">Criação de Sites</h3>
-                    <p class="text-gray-300 mb-4">Desenvolvemos sites modernos e responsivos, do zero ou aprimorando modelos existentes</p>
+                    <p class="text-gray-300 mb-4">Desenvolvemos sites modernos e responsivos, do zero ou aprimorando modelos existentes.</p>
                     <a href="site.html" class="inline-block mt-2 text-purple-400 hover:text-purple-300 font-medium">
                         Saiba mais <i class="fas fa-arrow-right ml-1"></i>
                     </a>
@@ -429,7 +429,7 @@
                         <i class="fas fa-cloud text-4xl"></i>
                     </div>
                     <h3 class="text-xl font-semibold mb-3">Tratamento de Dados</h3>
-                    <p class="text-gray-300 mb-4">Análises, ETL, automações de relatórios, backup, auditoria, gerenciamento completo de dados para decisões estratégicas</p>
+                    <p class="text-gray-300 mb-4">Análises, ETL, automações de relatórios, backup, auditoria, gerenciamento completo de dados para decisões estratégicas.</p>
                     <a href="dados.html" class="inline-block mt-2 text-purple-400 hover:text-purple-300 font-medium">
                         Saiba mais <i class="fas fa-arrow-right ml-1"></i>
                     </a>
@@ -440,7 +440,7 @@
                         <i class="fas fa-cogs text-4xl"></i>
                     </div>
                     <h3 class="text-xl font-semibold mb-3">Consultoria SEO</h3>
-                    <p class="text-gray-300 mb-4">Destaque sua presença digital e aumente sua visibilidade nos mecanismos de busca</p>
+                    <p class="text-gray-300 mb-4">Destaque sua presença digital e aumente sua visibilidade nos mecanismos de busca.</p>
                     <a href="seo.html" class="inline-block mt-2 text-purple-400 hover:text-purple-300 font-medium">
                         Saiba mais <i class="fas fa-arrow-right ml-1"></i>
                     </a>
@@ -619,56 +619,6 @@
         </div>
     </section>
     
-    <!-- Technology Stack Section -->
-    <section class="py-20 bg-dark-bg relative">
-        <div class="absolute inset-0 bg-[radial-gradient(circle_at_center,_rgba(139,92,246,0.08)_0%,transparent_50%)] pointer-events-none"></div>
-        <div class="container mx-auto px-4 sm:px-6 lg:px-8 relative">
-            <div class="text-center mb-16">
-                <h2 class="text-3xl md:text-4xl font-bold mb-4">Nossa <span class="text-gradient">Stack Tecnológica</span></h2>
-                <p class="text-gray-300 max-w-2xl mx-auto">Utilizamos as tecnologias mais avançadas para criar soluções robustas e escaláveis</p>
-            </div>
-            
-            <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-6">
-                <a href="https://reactjs.org/docs/getting-started.html" target="_blank" rel="noopener noreferrer" class="block glass-card p-4 flex flex-col items-center justify-center scroll-reveal opacity-0 translate-y-8">
-                    <div class="flex flex-col items-center justify-center">
-                        <i class="fab fa-react text-4xl card-icon mb-3"></i>
-                        <span class="text-sm font-medium">React.js</span>
-                    </div>
-                </a>
-                <a href="https://nodejs.org/en/docs/" target="_blank" rel="noopener noreferrer" class="block glass-card p-4 flex flex-col items-center justify-center scroll-reveal opacity-0 translate-y-8">
-                    <div class="flex flex-col items-center justify-center">
-                        <i class="fab fa-node-js text-4xl card-icon mb-3"></i>
-                        <span class="text-sm font-medium">Node.js</span>
-                    </div>
-                </a>
-                <a href="https://www.python.org/doc/" target="_blank" rel="noopener noreferrer" class="block glass-card p-4 flex flex-col items-center justify-center scroll-reveal opacity-0 translate-y-8">
-                    <div class="flex flex-col items-center justify-center">
-                        <i class="fab fa-python text-4xl card-icon mb-3"></i>
-                        <span class="text-sm font-medium">Python</span>
-                    </div>
-                </a>
-                <a href="https://docs.docker.com/" target="_blank" rel="noopener noreferrer" class="block glass-card p-4 flex flex-col items-center justify-center scroll-reveal opacity-0 translate-y-8">
-                    <div class="flex flex-col items-center justify-center">
-                        <i class="fab fa-docker text-4xl card-icon mb-3"></i>
-                        <span class="text-sm font-medium">Docker</span>
-                    </div>
-                </a>
-                <a href="https://www.mongodb.com/docs/" target="_blank" rel="noopener noreferrer" class="block glass-card p-4 flex flex-col items-center justify-center scroll-reveal opacity-0 translate-y-8">
-                    <div class="flex flex-col items-center justify-center">
-                        <i class="fas fa-database text-4xl card-icon mb-3"></i>
-                        <span class="text-sm font-medium">MongoDB</span>
-                    </div>
-                </a>
-                <a href="https://en.wikipedia.org/wiki/SQL" target="_blank" rel="noopener noreferrer" class="block glass-card p-4 flex flex-col items-center justify-center scroll-reveal opacity-0 translate-y-8">
-                    <div class="flex flex-col items-center justify-center">
-                        <i class="fas fa-server text-4xl card-icon mb-3"></i>
-                        <span class="text-sm font-medium">SQL</span>
-                    </div>
-                </a>
-            </div>
-        </div>
-    </section>
-
     <!-- Contact Section -->
     <section id="contact" class="py-20 bg-dark-surface">
         <div class="container mx-auto px-4">
